--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,8 @@ logs/
 vector_store/chroma/*.db
 vector_store/chroma/*.sqlite3
 *.sqlite3
+# Chroma cache (future-proof)
+vector_store/chroma/index/
 
 # Data files (uncomment if not needed in repo)
 # data/
